Navi: Use a different synthetic trial name than the study.

Bug: 919140
Change-Id: Ifc5c680e5e48afd4b0f75d260cd6c277350d5d7b
Reviewed-on: https://chromium-review.googlesource.com/c/1396712
Reviewed-by: Demetrios Papadopoulos <dpapad@chromium.org>
Commit-Queue: Hector Carmona <hcarmona@chromium.org>
Cr-Commit-Position: refs/heads/master@{#620107}
Former-commit-id: 77ed09dacadb3523047787e6d0eed0cc14b16ef3